@@ -53,15 +53,16 @@ pipeline {
             }
             steps {
                 withSonarQubeEnv('sonar-pro') {
-                    sh """\${scannerHome}/bin/sonar-scanner \\
-                        -Dsonar.projectKey=vprofile \\
-                        -Dsonar.projectName=vprofile-repo \\
-                        -Dsonar.projectVersion=1.0 \\
-                        -Dsonar.sources=src/ \\
-                        -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \\
-                        -Dsonar.junit.reportsPath=target/surefire-reports/ \\
-                        -Dsonar.jacoco.reportsPath=target/jacoco.exec \\
-                        -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml"""
+                    sh """JAVA_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED" \\
+                    \${scannerHome}/bin/sonar-scanner \\
+                    -Dsonar.projectKey=vprofile \\
+                    -Dsonar.projectName=vprofile-repo \\
+                    -Dsonar.projectVersion=1.0 \\
+                    -Dsonar.sources=src/ \\
+                    -Dsonar.java.binaries=target/ \\
+                    -Dsonar.junit.reportsPath=target/surefire-reports/ \\
+                    -Dsonar.jacoco.reportsPath=target/jacoco.exec \\
+                    -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml"""
                 }
 
                 timeout(time: 10, unit: 'MINUTES') {
